src/components/RichTextEditor/styles.module.css
.container {
	position: relative;
	border: var(--default-border-width) solid var(--border-color);
	border-radius: var(--default-border-radius);
	transition: all var(--default-transition-time);
	word-wrap: break-word;
	word-break: break-word;
	overflow: auto;

	&:hover {
		border-color: var(--hover-border-color);
	}

	&:focus-within {
		border-color: var(--primary-color);
	}
}

.title {
	padding-left: var(--spacing-4);
}

.editor {
	min-height: calc(1.4rem + 4 * var(--spacing-1));
	padding: var(--spacing-1) var(--spacing-4);
	outline: none;

	ul,
	ol {
		margin-left: var(--spacing-7);
	}

	a {
		cursor: pointer;
	}
}

.floating-menu {
	position: absolute;
	transform: translateY(-100%);
	background-color: var(--surface-background-color-tint-10);
	border-radius: var(--default-border-radius);
	box-shadow: var(--default-box-shadow);
	padding: var(--spacing-4);
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-items: center;
	gap: 2px;
	width: fit-content;
	z-index: 3;

	& > button {
		color: var(--text-color);
		display: flex;
		align-items: center;
		justify-items: center;
	}
}

.active-button {
	/* Adding important so that hover, or focus does not change background color. */
	background-color: var(--surface-background-color-shade-10) !important;
}

.active-button:hover {
	opacity: 0.8;
}

.vertical-border {
	height: 1.6rem;
	border-right: var(--default-border-width) solid var(--text-color);
	margin: 0 4px;
}

.image-container {
	position: relative;
	display: inline-block;

	--resize-circle-size: 12px;
	--move-by: calc(var(--resize-circle-size) / -2);

	& .resize-circle {
		position: absolute;
		width: var(--resize-circle-size);
		height: var(--resize-circle-size);
		background-color: var(--text-color);
		border: var(--default-border-width) solid var(--border-color);
		border-radius: var(--default-border-radius);
	}

	& .bottom-right {
		right: var(--move-by);
		bottom: var(--move-by);
		cursor: nwse-resize;
	}

	& .bottom-left {
		left: var(--move-by);
		bottom: var(--move-by);
		cursor: nesw-resize;
	}

	& .top-right {
		right: var(--move-by);
		top: var(--move-by);
		cursor: nesw-resize;
	}

	& .top-left {
		left: var(--move-by);
		top: var(--move-by);
		cursor: nwse-resize;
	}
}

